primer avance bis

--- a/html/index.html
+++ b/html/index.html
@@ -44,9 +44,40 @@
                     <span>Contraseña:</span>
                     <input type="password" id="password" name="password" required>
                 </label>
-                <input type="submit" class="action" value="Ingresar">
+                <button class="action" type="submit" >Ingresar</button>
             </form>
         </section>
+        <section class="registro">
+            <h3>Registro</h3>
+            <form action="">
+                <label for="dni">
+                    <span>DNI:</span>
+                    <input type="number" id="dni" name="dni" required>
+                </label>
+                <label for="name">
+                    <span>Nombre:</span>
+                    <input type="text" id="name" name="surname" autocomplete="name" required>
+                </label>
+                <label for="surname">
+                    <span>Apellido:</span>
+                    <input type="text" id="surname" name="surname" autocomplete="surname" required>
+                </label>
+                <label for="tel">
+                    <span>Teléfono:</span>
+                    <input type="tel" id="tel" name="tel" required>
+                </label>
+                <label for="email">
+                    <span>Mail:</span>
+                    <input type="email" id="emaiñ" name="email" autocomplete="email" required>
+                </label>
+                <label for="password">
+                    <span>Contraseña:</span>
+                    <input type="password" id="password" name="password" required>
+                </label>
+                <button class="action" type="submit" >Ingresar</button>
+            </form>
+        </section>
+
     </main>
 
       <script src="../js/menu.js"></script>
