--- a/html/index.html
+++ b/html/index.html
@@ -60,7 +60,7 @@
                 </label>
                 <label for="surname">
                     <span>Apellido:</span>
-                    <input type="text" id="surname" name="surname" autocomplete="surname" required>
+                    <input type="text" id="surname" name="surname" autocomplete="family-name" required>
                 </label>
                 <label for="tel">
                     <span>Teléfono:</span>
@@ -68,7 +68,7 @@
                 </label>
                 <label for="email">
                     <span>Mail:</span>
-                    <input type="email" id="emaiñ" name="email" autocomplete="email" required>
+                    <input type="email" id="email" name="email" autocomplete="email" required>
                 </label>
                 <label for="password">
                     <span>Contraseña:</span>
@@ -77,8 +77,25 @@
                 <button class="action" type="submit" >Ingresar</button>
             </form>
         </section>
-
     </main>
+    <footer>
+        <picture>
+            <img src="../public/ministerioDeporte.png" alt="Logo ministerio de deporte">
+        </picture>
+        <h3>Contactanos</h3>
+        <form action="">
+            <label for="email">
+                <input type="email" id="email_contact" name="email_contact" autocomplete="email" placeholder="Email" required>
+            </label>
+            <label for="name_contact">
+                <input type="text" id="name_contact" name="name_contact" autocomplete="name" placeholder="Nombre y Apellido" required>
+            </label>
+            <label for="motivo" class="motivo_contacto">
+                <input type="text" id="motivo" name="motivo" placeholder="Motivo" required>
+            </label>
+        </form>
+
+    </footer>
 
       <script src="../js/menu.js"></script>
 </body>
