--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Ministerio de deporte</title>
 </head>
 <body>
     <!-- header -->
     <header>
         <picture>
-            <img src="../public/ministerioDeporte.png" alt="Logo ministerio de deporte">
+            <img src="./public/ministerioDeporte.png" alt="Logo ministerio de deporte">
         </picture>
         <nav>
             <ul>
@@ -83,7 +83,7 @@
     </main>
     <footer>
         <picture>
-            <img src="../public/ministerioDeporte.png" alt="Logo ministerio de deporte">
+            <img src="./public/ministerioDeporte.png" alt="Logo ministerio de deporte">
         </picture>
         <h3>Contactanos</h3>
         <form action="">
@@ -101,6 +101,6 @@
 
     </footer>
 
-      <script src="../js/menu.js"></script>
+      <script src="./js/menu.js"></script>
 </body>
 </html>
