--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Ministerio de deporte</title>
 </head>
+
 <body>
     <!-- header -->
     <header>
@@ -21,8 +23,8 @@
                 <li><a href="#">Cerrar sesión</a></li>
                 <li><a href="#">Registrarse</a></li>
                 <li><a href="#">Registrar institución</a></li>
-            </ul>     
-            <button id="boton-menu">&#9776;</button>       
+            </ul>
+            <button id="boton-menu">&#9776;</button>
         </nav>
     </header>
     <!-- menu desplegable -->
@@ -47,7 +49,7 @@
                     <span>Contraseña</span>
                     <input type="password" id="password" name="password" required>
                 </label>
-                <button class="action" type="submit" >Ingresar</button>
+                <button class="action" type="submit">Ingresar</button>
             </form>
         </section>
         <section class="registro">
@@ -77,7 +79,33 @@
                     <span>Contraseña</span>
                     <input type="password" id="password" name="password" required>
                 </label>
-                <button class="action" type="submit" >Ingresar</button>
+                <button class="action" type="submit">Ingresar</button>
+            </form>
+        </section>
+        <section class="registro-instituto">
+            <h3>Registro de Instituto</h3>
+            <form action="">
+                <label for="nombre_instituto">
+                    <span>Nombre</span>
+                    <input type="text" id="nombre_instituto" name="nombre_instituto" required>
+                </label>
+                <label for="Localidad">
+                    <span>Localidad</span>
+                    <input type="text" id="localidad" name="localidad" required>
+                </label>
+                <label for="Direccion">
+                    <span>Direccion</span>
+                    <input type="text" id="direccion" name="direccion" required>
+                </label>
+                <label for="tel-instituto">
+                    <span>Teléfono</span>
+                    <input type="tel" id="tel-instituto" name="tel-instituto" required>
+                </label>
+                <label for="email">
+                    <span>Mail</span>
+                    <input type="email" id="email-insituto" name="email-insituto" autocomplete="email" required>
+                </label>
+                <button class="action" type="submit">Ingresar</button>
             </form>
         </section>
     </main>
@@ -88,19 +116,22 @@
         <h3>Contactanos</h3>
         <form action="">
             <label for="email">
-                <input type="email" id="email_contact" name="email_contact" autocomplete="email" placeholder="Email" required>
+                <input type="email" id="email_contact" name="email_contact" autocomplete="email" placeholder="Email"
+                    required>
             </label>
             <label for="name_contact">
-                <input type="text" id="name_contact" name="name_contact" autocomplete="name" placeholder="Nombre y Apellido" required>
+                <input type="text" id="name_contact" name="name_contact" autocomplete="name"
+                    placeholder="Nombre y Apellido" required>
             </label>
             <label for="motivo">
                 <textarea type="text" id="motivo" name="motivo" placeholder="Motivo" required></textarea>
             </label>
-            <button class="action" type="submit" >Enviar</button>
+            <button class="action" type="submit">Enviar</button>
         </form>
 
     </footer>
 
-      <script src="./js/menu.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
+
 </html>
