--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <label for="motivo">
                 <textarea type="text" id="motivo" name="motivo" placeholder="Motivo" required></textarea>
             </label>
-            <button class="action" type="submit">Enviar</button>
+            <button class="action" type="submit" id="enviar-contacto">Enviar</button>
         </form>
 
     </footer>
